--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,69 +1,63 @@
 {% load static %}
 
-<!-- <footer class="py-4 bg-navy sticky-bottom"> -->
-<!-- <footer class="py-4 bg-white fixed-bottom border-top"> -->
-<nav class="navbar navbar-expand-lg navbar-light bg-white border-top sticky-bottom">
 
-<div class="container">
-  <div class="row m-auto">   
-    <div class="col-3">
+<div class="my_footer">
+  <div class="container">
+    <div class="row mt-2">
+      <div class="col-3">
         <a class='nav-link' href="{% url 'contacts' %}">
-        <div class="text-dark text-center"><b>Контакты</b></div>
+          <div class="text-dark text-center"><b>Контакты</b></div>
         </a>
-    </div>
+      </div>
       <div class="col-3">
         <a class='nav-link' href="{% url 'personal_data' %}">
           <div class="text-dark text-center "><b>Политика обработки персональных данных</b></div>
         </a>
       </div>
-       <!-- <div class="col-1">
-        <a class='nav-link' href="{% url 'help' %}">
-          <div class="text-dark text-center"><b>Помощь</b></div>
-          </a>
-        </div> -->
-          <div class="col-3">
+      <!-- <div class="col-1">
+          <a class='nav-link' href="{% url 'help' %}">
+            <div class="text-dark text-center"><b>Помощь</b></div>
+            </a>
+          </div> -->
+      <div class="col-3">
         <a class='nav-link' href="{% url 'termsofuse' %}">
           <div class="text-dark text-center "><b>Условия использования</b></div>
-          </a>
-        </div>
-        <div class="col-3">
-          <a class='nav-link' href="{% url 'security_policy' %}">
-            <div class="text-dark text-center "><b>Правила безопасной оплаты</b></div>
-          </a>
-        </div>
-
-      <!-- <div class="col-2">
-        <a class='nav-link' href="{% url 'partnership' %}">
-        <a class='nav-link' href="#">
-        <div class="text-dark text-center "><b>Партнерство</b></div>
         </a>
       </div>
-        <div class="col-2">
-        <a class='nav-link' href="{% url 'socialmedia' %}">
-        <a class='nav-link' href="#">
-        <div class="text-dark text-center"><b>Мы в социальных сетях</b></div>
+      <div class="col-3">
+        <a class='nav-link' href="{% url 'security_policy' %}">
+          <div class="text-dark text-center "><b>Правила безопасной оплаты</b></div>
         </a>
+      </div>
+  
+      <!-- <div class="col-2">
+          <a class='nav-link' href="{% url 'partnership' %}">
+          <a class='nav-link' href="#">
+          <div class="text-dark text-center "><b>Партнерство</b></div>
+          </a>
         </div>
           <div class="col-2">
-          <a class='nav-link' href="{% url 'career' %}">
+          <a class='nav-link' href="{% url 'socialmedia' %}">
           <a class='nav-link' href="#">
-          <div class="text-dark text-center "><b>Карьера с Ruversity.com</b></div>
+          <div class="text-dark text-center"><b>Мы в социальных сетях</b></div>
           </a>
-          </div>-->
-        
-      </div>
-</div>
-  </nav>
+          </div>
+            <div class="col-2">
+            <a class='nav-link' href="{% url 'career' %}">
+            <a class='nav-link' href="#">
+            <div class="text-dark text-center "><b>Карьера с Ruversity.com</b></div>
+            </a>
+            </div>-->
+    </div>
+  
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-bottom">
-    <div class="container">
-      <div class="row m-auto">
-        <div class="m-0 text-center">
-          <img src={% static "images/PayKeeperLogo.png" %} alt="Image" width="300" height="200">
-        </div>
-      <div class="m-0 text-center text-black">
+    <div class="row mt-2">
+      <div class="text-center">
+        <img src={% static "images/PayKeeperLogo.png" %} alt="Image" width="300" height="200">
+      </div>
+      <div class="text-center text-black">
         <i>Copyright &copy; ruversity.com 2021</i>
       </div>
+    </div>
   </div>
-  </div>
-</nav>
+</div>
