--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
 
 
     <!-- ===========================Modal Accessible at every page from navbar======================= -->
-    <div class="modal" id='messagelModal'>
+    <!-- <div class="modal" id='messagelModal'>
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -66,11 +66,12 @@
                 </form>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- ==============================End of Modal======================== -->
     {% block content %}
 
     {% endblock %}
+    <br><br><br><br><br><br>
     {% include 'partials/_footer.html' %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
