--- a/project/static/style.css
+++ b/project/static/style.css
@@ -586,9 +586,9 @@ select > option {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  overflow-y: scroll;
+  /*overflow-y: scroll;
   opacity: 100%;
-  /* visibility: visible;
+  visibility: visible;
   visibility: hidden; */
 }
 
