--- a/project/static/style.css
+++ b/project/static/style.css
@@ -574,8 +574,28 @@ select > option {
 
 #lectureModal.openModal {
   display: block;
- 
 }
+/*=====================================*/
+#openSectionModal {
+  display: none;
+}
+
+#openSectionModal.openModal {
+  display: block;
+  position: relative;
+  background-color: blue;
+  bottom:0;
+  left:0;
+  width: 300px;
+  height: 200px;
+  color: white;
+}
+
+#sections {
+  position: relative;
+}
+
+/*========================================*/
 
 .hide {
   /* display: block; */
@@ -592,16 +612,4 @@ select > option {
   visibility: hidden; */
 }
 
-.page_location {
-  margin: auto;
-  /* display: block; */
-  position: relative;
-  top: 20Vh;
-  border-radius: 0.5%;
-  /* position: absolute; */
-  width: 60%;
-  height: 50%;
-  background-color: white;
-  /* overflow-y: scroll; */
-  /* overflow-y: auto; */
-}
+
