--- a/templates/workshop/edit_section.html
+++ b/templates/workshop/edit_section.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<body oncontextmenu="return false;">
+<!-- <body oncontextmenu="return false;"> -->
 <div class="container">
         <div class="row m-auto">
             <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);"
@@ -14,7 +14,7 @@
             </nav>
         </div>
 <div class="row m-auto"> 
-    <h3>Раздел {{section.enumerator}}: {{section.title}}</h3> 
+    <h3>Редактировать Раздел {{section.enumerator}}: {{section.title}}</h3> 
 </div>
 <div class="row m-auto">
     <form action="{% url 'edit_section' subject.id section.id %}" method="POST">
