--- a/project/static/style.css
+++ b/project/static/style.css
@@ -555,7 +555,6 @@ select > option {
   padding: 1rem;
   margin: auto;
   /* display: block; */
- 
   position: absolute;
   top: 20Vh;
   left: 20vw;
@@ -568,6 +567,7 @@ select > option {
   /* overflow-y: auto; */
 }
 
+/* ============================================ */
 #lectureModal {
   display: none;
 }
@@ -579,16 +579,18 @@ select > option {
 #openSectionModal {
   display: none;
 }
-
+/* =========================================== */
 #openSectionModal.openModal {
+  border-radius: 5px;
+  border-color: grey;
+  border-width:2px;
   display: block;
-  position: relative;
-  background-color: blue;
-  bottom:0;
-  left:0;
+  position: absolute;
+  bottom:10px;
+  left:200px;
   width: 300px;
   height: 200px;
-  color: white;
+  background-color: grey;
 }
 
 #sections {
@@ -606,10 +608,11 @@ select > option {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  /*overflow-y: scroll;
+  /*overflow-y: scroll;*/
   opacity: 100%;
-  visibility: visible;
-  visibility: hidden; */
+  /* visibility: visible;
+  visibility: hidden;*/
+  z-index: 1;
 }
 
 
