--- a/templates/workshop/edit_section.html
+++ b/templates/workshop/edit_section.html
@@ -46,15 +46,15 @@
     
 </div>
 <br>
-<div class="row m-auto">
+<div class="row m-auto border rounded bg-light text-center">
     <h3>Лекции</h3>
 </div>
 
 <!-- =============Create New Lecture Box============================================ -->
      
               
-    <div class="row m-auto border rounded bg-light text-center">
-        <h5>Создать новую лекцию</h5>
+    <div class="row m-auto">
+        <h3>Создать новую лекцию</h3>
     </div>
     <div class="row m-auto border rounded">
   
@@ -137,16 +137,23 @@
     <h3>Редактирование лекций</h3>
 {% for lecture in lectures %}
 {% if lecture.section == section %}
- 
-    <div class="row m-auto">
+    <div class="form-row mt-1">
         <!-- <a href="{% url 'edit_lecture' lecture.id %}" style="text-decoration: none" id="title"> -->
-        <a href="#" style="text-decoration: none" id="lecture_title">
+        <div class="col-7">
         <strong>Лекция {{lecture.enumerator}}: {{lecture.title}}. Длительность: {{lecture.length}} мин. Размер:  {{lecture.size_mb}} мб</strong>
-        </a>
+        </div>
+        <div class="col-2">
+            <input type="button" value="Редактировать" id="lecture_title" class="btn btn-sm btn-block btn-outline-dark">
+        </div>
+        <div class="col-2">
+            <a href="{% url 'delete_lecture' lecture.id %}" style="text-decoration: none">
+                <input type="button" value="Удалить" class='btn btn-sm btn-block btn-outline-dark'>
+            </a>
+        </div>
+    </div>
     <!-- ==============================Lecture Edit Modal=================================== -->
         <div id="lectureModal">
             <div class="hide">
-                <!-- <div class="page_location"> -->
                     <div class="lecture_box">
                         <div class="row">
                             <div class="col-11"><h4>Форма редактирования лекции</h4></div>
@@ -229,20 +236,10 @@
                     </div>
                 </div>
             </div>
-        <!-- </div> -->
-    </div>
         <!-- ==============================================End of Lectue Edit Modal=========================== -->
-
-
     </div>
-
-   
-
-
 {% endif %}
-{% endfor %}
-
-            
+{% endfor %}           
 </div>
 
 
