--- a/templates/workshop/edit_subject.html
+++ b/templates/workshop/edit_subject.html
@@ -2,8 +2,6 @@
 {% load static %}
 {% block content %}
 <!-- <body oncontextmenu="return false;"> -->
- 
-
 <div class="container">
     <div class="row m-auto">
         <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);"
@@ -105,7 +103,7 @@
             
         <div class="col-3">
     <a href="{% url 'agreement' subject.id%}" style="text-decoration: none">
-    <input type="submit" value="Загрузить на сервер" class="btn btn-outline-dark btn-block">
+    <input type="submit" value="Загрузить на сервер" class="btn btn-outline-danger btn-block">
     </a>
         </div>
 
@@ -237,16 +235,17 @@
         </div>
     </div>
 </div>
-</div>
-</div>
-  
-<h3>Разделы</h3>
-<!-- ===================Create New Section Box============================== -->
 
-    <div class="row m-auto border rounded bg-light text-center">
-        <h5>Создать новый раздел</h5>
+</div>
+<!-- ===================Create New Section Box============================== -->
+<div class="row m-auto border rounded bg-light text-center">
+<h3>Разделы</h3>
+</div>
+
+    <div class="row m-auto">
+        <h3>Создать новый раздел</h3>
     </div>
-    <div class="row m-auto pb-2 border rounded">
+    <div class="row m-auto>">
     
         <form action="{% url 'create_new_section' subject.id %}" method="POST">
             {% csrf_token %}
@@ -269,40 +268,63 @@
     </div>
   
     <!-- =====================Sections============================================== -->
-    <h3>Редактирование разделов</h3>
-    
+    <div class="row m-auto pt-2">
+        <h3>Редактирование разделов</h3>
+    </div>
     {% for section in sections %}
-    <div class="row m-auto">
-        <a href="{% url 'edit_section' subject.id section.id %}"  id="open_sections"><h5>Раздел {{section.enumerator}}: {{section.title}}.</h5></a>
-        <br><br>
+    <!-- <div class="row m-auto pt-2" id="sections"> -->
+        <!-- <div class="col-6"> -->
+         <!-- <h5><span id="open_sections">Раздел {{section.enumerator}}: {{section.title}}.</span></h5> -->
+         <!-- <h5>Раздел {{section.enumerator}}: {{section.title}}.</h5>
+        </div> -->
+
+    <div class="row m-auto pt-2">
+        <div class="col-6">
+            <a id='a_id_section' href='#' <h5 data-bs-toggle="collapse" data-bs-target='#section{{section.id}}'>{{section.enumerator}} {{section.title}} </h5></a>
+        </div>
+        <div class="col-2 align-self-end">
+            <a href="{% url 'edit_section' subject.id section.id %}" style="text-decoration: none">
+                <input type="button" value="Редактировать" class='btn btn-sm btn-block btn-outline-dark'>
+            </a>
+        </div>
+        
+        <div class="col-2 align-self-end">
+            <a href="{% url 'delete_section' subject.id section.id %}" style="text-decoration: none">
+                <!-- <input type="submit" value="Delete" class="btn btn-info btn-block"> -->
+                <input type="button" value="Удалить" class='btn btn-sm btn-block btn-outline-dark'>
+            </a>
+        </div>
+       
+        <div class="collapse" id='section{{section.id}}'>
+            <div class="row" style='min-height:fit-content'>
+                <div class="col">
+                    {% for lecture in lectures %}
+                    {% if lecture.section == section %}
+                    <div class="row m-auto">
+                        {{lecture.title}}
+                    </div>
+                    {% endif %}
+                    {%endfor%}
+                </div>
+            </div>
+        </div>  
     </div>
 
-    <div id="openSectionModal">
-          
+
+    <div id="openSectionModal">        
         {% for lecture in lectures %}
         {% if lecture.section == section %}
-        <div class="row">
+        <div class="row m-auto">
             {{lecture.title}}
         </div>
         {% endif %}
-        {%endfor%}
-        
+        {%endfor%}     
     </div>
-
-
-        <!-- <div class="row mt-3 border rounded text-center"></div> -->
 
     {% endfor %}
     <!-- ======================End of Section Box=========================== -->
-
-
-
-    </div>
 </div>
-
-
-
-  
+ 
 </div>
 </div>
         </div>
@@ -310,6 +332,7 @@
 </div>
     {% endif %}
 
+</div>
 </div>
 
 
