--- a/templates/mycourses/subject_purchased.html
+++ b/templates/mycourses/subject_purchased.html
@@ -113,7 +113,7 @@
                 {% if lecture.section == section %}
                     <div id="section{{section.id}}" class='collapse'>
                         <li class="list-group-item" id='lecture'>
-                            <a href="{% url 'video' subject.id lecture.id %}" target="_blank" id='a_id'>{{lecture.title}} {{lecture.length}} min</a>
+                            <a href="{% url 'video' subject.id lecture.id %}" target="_blank" id='a_id'>{{lecture.title}} {{lecture.length}} мин. </a>
                         </li>
                     </div>
                 {% endif %}
