--- a/static/style.css
+++ b/static/style.css
@@ -1,13 +1,33 @@
 :root {
-    --max-width: 56%;
+  --max-width: 56%;
 }
 
-body {
-  font-family: Arial, Helvetica, sans-serif
+html {
+  min-height: 100%;
+  /* display: flex; */
 }
+
+/*making footer appear at the bottom of blank pages & go it down at pages with a lot of content */
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  min-height: 100vh;
+  max-height: fit-content;
+  /*background-color: blueviolet;*/
+  position: relative;
+}
+
+.my_footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: whitesmoke;
+}
+
 
 h3 {
-  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-weight: 300;
   font-size: 2rem;
 }
@@ -15,99 +35,98 @@ h3 {
 h5 {
   font-size: 1.2rem;
 }
+
 .menu_font {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-
 }
 
 .rating {
-    /* overflow: hidden; */
-    transform: translate(-50%, -50%) rotateY(180deg) ;
-    /* display: flex; */
-    /* vertical-align: bottom;
+  /* overflow: hidden; */
+  transform: translate(-50%, -50%) rotateY(180deg);
+  /* display: flex; */
+  /* vertical-align: bottom;
     display: inline-block; */
-    /* width: 155px;
+  /* width: 155px;
     height: 30px; */
 }
 
-.rating > input {
-    display: none;
-    /* opacity: 1; */
+.rating>input {
+  display: none;
+  /* opacity: 1; */
 }
 
 .rating label {
-    /* display: inline; */
-    cursor: pointer;
-    width: 30px;
-    padding-left: 1px;
-    /* background: #ccc; */
+  /* display: inline; */
+  cursor: pointer;
+  width: 30px;
+  padding-left: 1px;
+  /* background: #ccc; */
 }
 
 .rating label::before {
-    content: '\f005';
-    font-family: 'Font Awesome 5 free';
-    /* font-weight: 900; */
-    position: relative;
-    /* position: absolute; */
+  content: '\f005';
+  font-family: 'Font Awesome 5 free';
+  /* font-weight: 900; */
+  position: relative;
+  /* position: absolute; */
 
-    /* display: block; */
-    font-size: 20px;
-    color: grey;
+  /* display: block; */
+  font-size: 20px;
+  color: grey;
 }
 
 .rating label::after {
-    content: '\f005';
-    font-family: 'Font Awesome 5 free';
-    font-weight: 900;
-    position: absolute;
-    /* position: relative; */
-    display: block;
-    font-size: 20px;
-    color: yellow;
-    top: 0;
-    opacity: 0;
-    transition: .5s;
-    text-shadow: 0 2px 5px rgba(0,0,0,.5);
+  content: '\f005';
+  font-family: 'Font Awesome 5 free';
+  font-weight: 900;
+  position: absolute;
+  /* position: relative; */
+  display: block;
+  font-size: 20px;
+  color: yellow;
+  top: 0;
+  opacity: 0;
+  transition: .5s;
+  text-shadow: 0 2px 5px rgba(0, 0, 0, .5);
 }
 
 .rating label:hover:after,
-.rating input:hover ~ label:after,
-.rating input:checked ~ label:after
-{
-    opacity: 1;
+.rating input:hover~label:after,
+.rating input:checked~label:after {
+  opacity: 1;
 }
 
 /*=========================================*/
 
 .stars-outer {
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
 }
 
 .stars-inner {
-    position: absolute;
-    top: 0;
-    /* left: 0; */
-    white-space: nowrap;
-    overflow: hidden;
-    /*color: yellow;*/
-   /* width: var(--max-width);*/
+  position: absolute;
+  top: 0;
+  /* left: 0; */
+  white-space: nowrap;
+  overflow: hidden;
+  /*color: yellow;*/
+  /* width: var(--max-width);*/
 }
 
 .stars-outer::before {
-    content: '\f005 \f005 \f005 \f005 \f005';
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 200;
-    color:grey;
-    font-size: 20px;
+  content: '\f005 \f005 \f005 \f005 \f005';
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 200;
+  color: grey;
+  font-size: 20px;
 }
 
 .stars-inner::before {
-    content: '\f005 \f005 \f005 \f005 \f005';
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    color: yellow;
-    font-size: 20px;
+  content: '\f005 \f005 \f005 \f005 \f005';
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  color: yellow;
+  font-size: 20px;
 }
 
 /* ==========================VideoPlayer=========================== */
@@ -138,9 +157,10 @@ video_1 {
 
 /* Containers */
 .show-controls:hover .controls-container {
-    opacity: 1;
-    transition: all 0.1s ease-out;
+  opacity: 1;
+  transition: all 0.1s ease-out;
 }
+
 .show-controls {
   width: 100%;
   height: 5%;
@@ -165,8 +185,9 @@ video_1 {
   justify-content: space-between;
   opacity: 0;
   transition: all 0.5s ease-out 0.5s;
- 
+
 }
+
 /* Progress Bar */
 .progress-range {
   height: 8px;
@@ -183,7 +204,7 @@ video_1 {
   transition: height 0.1s ease-in-out;
 }
 
-.progress-range:hover{
+.progress-range:hover {
   height: 12px;
 }
 
@@ -268,7 +289,7 @@ video_1 {
   margin-right: 15px;
 }
 
-.speed{
+.speed {
   position: relative;
   top: 10px;
 }
@@ -295,7 +316,7 @@ select {
   border-radius: 5px;
 }
 
-select > option {
+select>option {
   /* background: (0, 0, 0, 0.9); */
   background: rgb(255, 254, 254);
   border: none;
@@ -359,6 +380,7 @@ select > option {
   .progress-bar {
     border-radius: 0;
   }
+
   /* Volume Bar */
   .volume-range {
     width: 50px;
@@ -419,7 +441,7 @@ select > option {
   float: left;
   width: 70%;
   /* background: red; */
-  /* height: 100%;
+/* height: 100%;
   overflow: auto;
   box-sizing: border-box;
   padding: 0.5em;
@@ -436,12 +458,13 @@ select > option {
 }
 
 
- #video {
+#video {
   max-width: 80vw;
   min-width: 800px;
   border: 5px solid black;
   border-radius: 10px;
-  /* background: black; */ */
+  /* background: black; */
+  */
   /* position: relative; */
   /* cursor: pointer; */
 
@@ -459,17 +482,17 @@ select > option {
 }
 
 .section_1 {
-  background-color:rgb(245, 244, 244);
+  background-color: rgb(245, 244, 244);
   padding: 10px;
   border-style: solid;
   border-width: 0.1rem;
   border-color: grey;
-} 
+}
 
-.section_1:hover{
+.section_1:hover {
   background-color: lightgrey;
   font-size: 1.1rem;
-  
+
 }
 
 #a_id_section {
@@ -483,7 +506,7 @@ select > option {
   /* text-decoration: line-through; */
   color: black;
   font-weight: 900;
-  
+
 }
 
 
@@ -496,7 +519,7 @@ select > option {
   display: block;
   color: blue;
   font-style: italic;
-  
+
 }
 
 #a_id:hover {
@@ -504,25 +527,26 @@ select > option {
   color: blue;
   /* font-size: 1.1rem; */
   font-weight: bold;
- 
+
 }
+
 /* #img_fit{ */
-  /* height: 10rem; */
-  /* object-fit: cover; */
-  /* object-fit: none; */
-  /* object-fit: scale-down; */
-  /* object-fit: contain; */
-  /* object-fit: fill; */
+/* height: 10rem; */
+/* object-fit: cover; */
+/* object-fit: none; */
+/* object-fit: scale-down; */
+/* object-fit: contain; */
+/* object-fit: fill; */
 /* } */
 
-.img_scale:hover{
+.img_scale:hover {
   /* opacity: 2; */
   transform: scale(1.1);
   z-index: 1;
 }
 
-.nav-link{
-  padding:0%;
+.nav-link {
+  padding: 0%;
 }
 
 #box {
@@ -536,25 +560,51 @@ select > option {
   padding: 1rem;
   margin: auto;
   /* display: block; */
-  position: relative;
+  position: absolute;
   top: 20Vh;
+  left: 20vw;
   border-radius: 0.5%;
   /* position: absolute; */
-  width: 65%;
-  height: 47%;
+  width: 1000px;
+  height: 380px;
   background-color: white;
   /* overflow-y: scroll; */
   /* overflow-y: auto; */
 }
 
+/* ============================================ */
 #lectureModal {
   display: none;
 }
 
 #lectureModal.openModal {
   display: block;
- 
 }
+
+/*=====================================*/
+#openSectionModal {
+  display: none;
+}
+
+/* =========================================== */
+#openSectionModal.openModal {
+  border-radius: 5px;
+  border-color: grey;
+  border-width: 2px;
+  display: block;
+  position: absolute;
+  bottom: 10px;
+  left: 200px;
+  width: 300px;
+  height: 200px;
+  background-color: grey;
+}
+
+#sections {
+  position: relative;
+}
+
+/*========================================*/
 
 .hide {
   /* display: block; */
@@ -565,22 +615,9 @@ select > option {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  overflow-y: scroll;
+  /*overflow-y: scroll;*/
   opacity: 100%;
   /* visibility: visible;
-  visibility: hidden; */
-}
-
-.page_location {
-  margin: auto;
-  /* display: block; */
-  position: relative;
-  top: 20Vh;
-  border-radius: 0.5%;
-  /* position: absolute; */
-  width: 60%;
-  height: 50%;
-  background-color: white;
-  /* overflow-y: scroll; */
-  /* overflow-y: auto; */
+  visibility: hidden;*/
+  z-index: 1;
 }
