--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -19,8 +19,10 @@
           <form action="{% url 'login' %}" method='POST'>
             {% csrf_token %}
             <div class="form-group">
-              <label for="username">Имя пользователя</label>
-              <input type="text" name="username" class="form-control" placeholder="Введите имя пользователя" required>
+              <!-- <label for="username">Имя пользователя</label>
+              <input type="text" name="username" class="form-control" placeholder="Введите имя пользователя" required> -->
+              <label for="username">Электронная почта</label>
+              <input type="email" name="username" class="form-control" placeholder="Введите имя пользователя" required>
             </div>
             <div class="form-group">
               <label for="password">Пароль</label>
