--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -27,9 +27,13 @@
                             <label for="last_name" class="text-black">Фамилия</label>
                             <input type="text" name="last_name" class="form-control" required>
                         </div>
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label for="username" class="text-black">Логин</label>
                             <input type="text" name="username" class="form-control" required>
+                        </div> -->
+                        <div class="form-group">
+                            <label for="username" class="text-black">Электронная почта</label>
+                            <input type="email" name="username" class="form-control" required>
                         </div>
                         <div class="form-group">
                             <label for="password" class="text-black">Пароль</label>
@@ -39,10 +43,7 @@
                             <label for="password2" class="text-black">Подтверждение пароля</label>
                             <input type="password" name="password2" class="form-control" required>
                         </div>
-                        <div class="form-group">
-                            <label for="email" class="text-black">Электронная почта</label>
-                            <input type="email" name="email" class="form-control" required>
-                        </div>
+                        
 
                             <input type="checkbox" id='custormer_type' name='customer_type' value='customer_type'> Поставьте галочку, если вы регистрируетесь как юридическое лицо <br><br>
 
