--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <title>Video</title>
+    <title>Ruversity</title>
 
     <script src="https://kit.fontawesome.com/facf52e8a9.js" crossorigin="anonymous"></script>
 
