--- a/templates/workshop/agreement.html
+++ b/templates/workshop/agreement.html
@@ -164,13 +164,13 @@
 
 <div class="row p-3 center">
     <div class="col">
-<a href="{% url 'disagree' subject.id%}">
+<a href="{% url 'disagree' subject.id%}" style="text-decoration: none">
     <!-- <input type="submit" value="I Disagree" class="btn btn-info btn-block"> -->
     <input type="submit" value="Не согласен" class='btn btn-sm btn-block btn-outline-dark'>
 </a>
     </div>
 <div class="col">
-<a href="{% url 'agree' subject.id%}">
+<a href="{% url 'agree' subject.id%}" style="text-decoration: none">
     <!-- <input type="submit" value=" I Agree" class="btn btn-info btn-block"> -->
     <input type="submit" value="Согласен" class='btn btn-sm btn-block btn-outline-dark'>
 </a>
