--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container mt-3 p-2">
-    <div class="row">
+    <div class="row mb-5">
         <div class="col-md-6 mx-auto">
             <div class="card">
                 <!-- <div class="card-header bg-info text-white"> -->
@@ -57,6 +57,7 @@
                 </div>
             </div>
         </div>
+      
     </div>
 </div>
 
