--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 
-<div class="my_footer">
+<div class="my_footer mt-5">
   <div class="container">
     <div class="row mt-2">
       <div class="col-1"></div>
