--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
 
     <!-- ================Custom CSS & JS========================== -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
-
+<meta name="yandex-verification" content="a30300dac353787a" />
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
     (function (m, e, t, r, i, k, a) {
