--- a/project/static/style.css
+++ b/project/static/style.css
@@ -8,20 +8,19 @@ html {
 }
 
 .mobile {
-
   width: 50rem;
-
 }
 
 @media(max-width: 575px) {
   body {
-    font-size: 0.2rem;
+    font-size: 1rem;
   }
 
-   body h3 {
+   body h3 h5 {
     font-size: 1rem;
     font-weight: 0;
   }
+
   .mobile {
     width:20rem;
  
