--- a/project/static/style.css
+++ b/project/static/style.css
@@ -2,43 +2,9 @@
   --max-width: 56%;
 }
 
-html {
+/* html {
   min-height: 100%;
-  /* display: flex; */
-}
-
-.mobile {
-
-  width: 50rem;
-
-}
-
-@media(max-width: 575px) {
-  body {
-    font-size: 0.7rem;
-  }
-
-  body h3 h5 {
-    font-size: 1rem;
-    font-weight: 0;
-  }
-
-  .mobile {
-    width: 20rem;
-
-  }
-
-  .mobile button {
-    margin-top: 0.2rem;
-    width: 30rem;
-  }
-
-  .mobile .btn {
-    margin: 0.2rem;
-    width: 9rem;
-  }
-}
-
+} */
 
 /*making footer appear at the bottom of blank pages & go it down at pages with a lot of content */
 body {
@@ -47,6 +13,15 @@ body {
   max-height: fit-content;
   /*background-color: blueviolet;*/
   position: relative;
+}
+h3 {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-weight: 300;
+  font-size: 2rem;
+}
+
+h5 {
+  font-size: 1.2rem;
 }
 
 .my_footer {
@@ -58,15 +33,53 @@ body {
   background-color: whitesmoke;
 }
 
-
-h3 {
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-weight: 300;
-  font-size: 2rem;
+.mobile {
+  width: 50rem;
 }
 
-h5 {
-  font-size: 1.2rem;
+.card_subject {
+  display: inline;
+  width: 20vw;
+}
+.card_menu {
+  display: inline;
+  width: 40vw;
+}
+
+@media(max-width: 575px) {
+  body {
+    font-size: 0.7rem;
+    min-width:fit-content;
+  }
+
+  h3, h4, h5 {
+    font-size: 1rem;
+    font-weight: 0;
+  }
+
+  .mobile {
+    width: 20rem;
+  }
+
+  .mobile button {
+    margin-top: 0.2rem;
+    width: 30rem;
+  }
+
+  .mobile .btn {
+    margin: 0.2rem;
+    width: 9rem;
+  }
+
+  .card_subject {
+    display: block;
+    width: 100vw;
+  }
+  .card_menu {
+    margin-top: 2vh;
+    display: block;
+    width: 100vw;
+  }
 }
 
 .menu_font {
