--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,8 +1,8 @@
 {% load static %}
 
 
-<div class="my_footer mt-5">
-  <div class="container">
+<div class="my_footer">
+  <!-- <div class="container"> -->
     <div class="row mt-2">
       <div class="col-1"></div>
       <div class="col-2">
@@ -62,5 +62,5 @@
         <i>Copyright &copy; ruversity.com 2021</i>
       </div>
     </div>
-  </div>
+  <!-- </div> -->
 </div>
